# deep-hunter-exoplanet

./: .gitignore  README.md  main.py  pyproject.toml
.gradio/flagged/: dataset1.csv
app/: app.py
hf_space/: app.py
src/data/: generate_images.py  generate_images_hard.py  generate_images_kepler_style.py
src/models/: predict.py  train.py  train_hard.py  train_kepler_style.py
